Checked the 9th Box

--- a/config/includes.binary/isolinux.cfg
+++ b/config/includes.binary/isolinux.cfg
@@ -1,11 +1,12 @@
-UI menu.c32
+UI vesamenu.c32
 PROMPT 0
-MENU TITLE ⚠️ WARNING: PERMANENT DATA DESTRUCTION ⚠️
+MENU TITLE !! Universal Disk Wiper — !! PERMANENT DATA DESTRUCTION !!
+MENU BACKGROUND grub-4x3.png
 TIMEOUT 50
 DEFAULT wipe
 
 LABEL wipe
-    MENU LABEL 🧹 Start Disk Wiper (ALL DATA WILL BE DESTROYED!)
+    MENU LABEL !! Start Disk Wiper (ALL DATA WILL BE DESTROYED!)
     KERNEL /live/vmlinuz
     APPEND initrd=/live/initrd.img boot=live components quiet splash toram=filesystem.squashfs auto exec=wiper.sh
 
@@ -28,4 +29,3 @@ LABEL live
     MENU LABEL Boot into Live Environment (Safe Mode - No Wipe)
     KERNEL /live/vmlinuz
     APPEND initrd=/live/initrd.img boot=live components quiet splash
-
